@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
title Class Diagram - Create User Account

class "UserManagement.UserCreate" as UserManagement_UserCreate_0 {
  +doGet()
  +doPost()
  +loadFormOptions()
}

class "UserService" as UserService_1 {
  +createUser()
  +getAllUser()
}

class "UserDao" as UserDao_2 {
  +getDepartmentOptions()
  +getLocationOptions()
  +createUser()
}

class "PasswordUtil" as PasswordUtil_3 {
  +sha256()
}

class "Users" as Users_4 {
  +id
  +username
  +email
  +role
  +departmentId
  +locationId
}

UserManagement_UserCreate_0 --> UserDao_2 : load department and location options
UserManagement_UserCreate_0 --> UserService_1 : createUser(...)
UserService_1 --> PasswordUtil_3 : hash password
UserService_1 --> UserDao_2 : insert user
UserDao_2 --> Users_4 : map user model
@enduml
